# pcfl-web

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
routes/: __init__.py  apis.py  views.py
static/css/: base.css
static/js/: index.js
templates/: 404.html  index.html  result.html
templates/includes/: head.html
